# shrmpl-srv-preview

./: .gitignore  Cargo.toml  README.md
doc/: 000-master-plan.md  001-TODO.md  010-dev-env-setup.md  100-shrmpl-kv-idea.md  100-shrmpl-kv.md  101-shrmpl-kv-techspec.md  201-shrmpl-log-techspec.md  300-shrmpl-vault-idea.md  301-shrmpl-vault-techspec.md  302-shrmpl-vault-mtls.md
etc/: Dockerfile  shrmpl-kv-srv-loc.env  shrmpl-log-srv-loc.env  shrmpl-vault-cli.env  shrmpl-vault-srv-loc.env
etc/vault-configs/: dev_simple-example_app-server-config-json_08ff3053-b7ba-4f8a-a0d5-b4107c3fc319  test-config
examples/go/: README.md  go.mod  main.go
examples/go/shrmpl/: go.mod  kv_client.go  logging_client.go  shrmpl.go  vault_client.go
examples/python/: README.md  example.py  shrmpl.py
go-load-test/: README.md  go.mod  kv_client.go  main.go
src/: config.rs  lib.rs  shrmpl_kv_cli.rs  shrmpl_kv_client.rs  shrmpl_kv_loadtest.rs  shrmpl_kv_srv.rs  shrmpl_log_client.rs  shrmpl_log_srv.rs  shrmpl_vault_cli.rs  shrmpl_vault_srv.rs
